# cortex

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  LICENSE  MISTAKES.md  Makefile  README.md  SECURITY.md  SESSIONS.md  conftest.py  docker-compose.yml  middleware.ts  pyproject.toml  railway.toml  render.yaml  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  production-smoke.yml  staging-validation.yml
api/: Dockerfile  Dockerfile.query  contradictions.py  decisions.py  deps.py  gdpr.py  main.py  memory.py  metrics.py  remember.py  requirements-query.txt  schemas.py  telemetry.py  webhooks.py
connectors/github/: producer.py
connectors/jira/: producer.py
connectors/linear/: producer.py
connectors/slack/: producer.py
docs/: AURA_MIGRATION.md  CONNECTOR_VALIDATION.md  CUSTOM_DOMAIN.md  DATA_SOURCES.md  DEMO_RECORDING.md  DEPLOY-FREE.md  DEPLOY.md  LAUNCH.md  MCP_SETUP.md  PORTFOLIO_DEMO.md  PRODUCTION_READINESS.md  REFINEMENT_AUDIT.md
extraction/: decision_extractor.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  middleware.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts  vitest.config.ts  wrangler.toml
graph/: gdpr.py  migrate.py  query.py  rbac.py  writer.py
intelligence/: contradiction_detector.py  decay_engine.py
mcp/: Dockerfile  auth.js  package-lock.json  package.json  server.js  server.test.js
memory/: episodic.py  quarantine.py  semantic.py
pipeline/: Dockerfile  __init__.py  extraction_worker.py
scoring/: cmvk.py  cmvk_llm.py  importance.py  trust_scorer.py  write_pipeline.py
scripts/: __init__.py  benchmark_query.py  ci_staging_validation.sh  connect_slack.py  demo.sh  demo_catalog.py  dual_workspace_smoke.py  generate_readme_demo_gif.py  import_adr_markdown.py  import_github_graph.py  import_github_org.py  init_kafka_topics.py  inject_github_event.py  inject_jira_event.py  inject_linear_event.py  inject_slack_message.py  run_pipeline_worker_local.sh  seed_demo.py  seed_oss_fastapi_demo.py  staging_smoke.py  start_api_production.sh  start_portfolio_demo.sh  verify_free_deploy.sh  verify_slack_pipeline.py
sdk/: __init__.py  client.py
shared/: models.py
(+121 files in other folders)
