[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
version = "0.1.0"
description = "Organizational Memory Operating System for AI-native companies"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Abhinaysai Kamineni", email = "kamineniabhinaysai@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    # Kafka
    "confluent-kafka>=2.4.0",
    # Neo4j
    "neo4j>=5.20.0",
    # PostgreSQL / TimescaleDB
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    # Qdrant
    "qdrant-client>=1.9.1",
    # Redis
    "redis>=5.0.4",
    # LLM / AI
    "openai>=1.30.0",
    "sentence-transformers>=3.0.1",
    "langchain>=0.2.5",
    "langgraph>=0.1.5",
    # NLP
    "spacy>=3.7.4",
    # Logging
    "structlog>=24.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP client
    "httpx>=0.27.0",
    # Utilities
    "tenacity>=8.3.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    # MLflow
    "mlflow>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "types-redis>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "connectors*",
    "extraction*",
    "scoring*",
    "graph*",
    "memory*",
    "intelligence*",
    "api*",
    "pipeline*",
    "sdk*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "SIM", "ARG"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing --cov-fail-under=70"
